--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
+    <link rel="stylesheet" href="public/style.css">
 </head>
 
 <body>
     <div id="render-target"></div>
+    <script src="public/bundle.js"></script>
 </body>
 
 
