more research stuff :) (all ui related)

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,15 @@
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
-    <link rel="stylesheet" href="public/style.css">
+
+    <link rel="stylesheet" href="public/vendor.css">
+    <link rel="stylesheet" href="public/main.css">
 </head>
 
 <body>
     <div id="render-target"></div>
-    <script src="public/bundle.js"></script>
+    <script src="public/vendor.js"></script>
+    <script src="public/main.js"></script>
 </body>
 
 
