--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
 
-    <link rel="stylesheet" href="public/vendor.css">
-    <link rel="stylesheet" href="public/main.css">
+    <link rel="stylesheet" href="/public/vendor.css">
+    <link rel="stylesheet" href="/public/main.css">
 </head>
 
 <body>
     <div id="render-target"></div>
-    <script src="public/vendor.js"></script>
-    <script src="public/main.js"></script>
+    <script src="/public/vendor.js"></script>
+    <script src="/public/main.js"></script>
 </body>
 
 
